index.html, local.html e video.html prontos

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
          <nav>
              <ul>
-                 <li>Página Inicial</li>
-                 <li>Vídeos Selecionados</li>
-                 <li>Localização</li>
+                 <li><a href="index.html">Página Inicial</a></li>
+                 <li><a href="video.html">Vídeos Selecionados</a></li>
+                 <li><a href="local.html">Localização</a></li>
              </ul>
          </nav>
      </aside>
@@ -71,8 +71,8 @@
      </section>
 
 
-     <footer>
-         Desenvolvido por Beatriz Fontoura&copy;
+      <footer>
+         Desenvolvido por <a href="https://github.com/befonto" target="_blank">Beatriz Fontoura&copy;</a>
      </footer>
  </div>
  </body>
