--- a/local.html
+++ b/local.html
@@ -1,22 +1,60 @@
+<!DOCTYPE html>
+<html lang="pt-br">
 
-[AQUI ENTRA A IMAGEM DA LOGO]
+<head>
+    <meta charset="UTF-8">
+    <title>Localização - Estudo Com Café</title>
+    <link rel="stylesheet" type="text/css"  href="celular.css">
+    <link rel="stylesheet" type="text/css"  href="desktop.css">
+</head>
 
--Página Inicial
--Vídeos Selecionados
--Localização
+ <body>
 
-Venha estudar aqui!
+ <div id="interface">
 
-Cursos profissionalizantes
+     <aside id="logo-menu">
+         <header>
+             <h1>
+                 <a href="index.html">
+                     <img src="imagens/logo.png">
+                 </a>
+             </h1>
+         </header>
 
-[AQUI ENTRA UM MAPA DO GOOGLE MAPS]
+         <nav>
+             <ul>
+                 <li><a href="index.html">Página Inicial</a></li>
+                 <li><a href="video.html">Vídeos Selecionados</a></li>
+                 <li><a href="local.html">Localização</a></li>
+             </ul>
+         </nav>
+     </aside>
+
+     <section>
+             <article id="artigo-interno">
+
+                 <h1>Venha estudar aqui!</h1>
+
+                 <h2>Cursos profissionalizantes</h2>
+
+                    <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3691.5886366870845!2d114.1646818867539!3d22.293567290789674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1687789444115!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
-[AQUI ENTRA UM PARÁGRAFO]
-[AQUI ENTRA UM PARÁGRAFO]
-[AQUI ENTRA UM PARÁGRAFO]
-[AQUI ENTRA UM PARÁGRAFO]
-[AQUI ENTRA UM PARÁGRAFO]
+                       <p>Silvio Santos Ipsum Ma não existem mulher feiam, existem mulher que não conhece os produtos Jequitiamm. Ma vejam só, vejam só. Patríciaaammmm... Luiz Ricardouaaammmmmm. Boca sujuam... sem vergonhuamm. Ha haeeee. Hi hi. O prêmio é em barras de ouro, que vale mais que dinheiroam. O arriscam tuduam, valendo um milhão de reaisuam.</p>
 
+                       <p>Ma quem quer dinheiroam? O Raul Gil é gayam! ... Maa O Ah Ae! Ih Ih! O Raul Gil é gayamm! Ma tem ou não tem o celular do milhãouamm? É bom ou não éam? Mah roda a roduamm. Ma você, topa ou não topamm.</p>
 
-Desenvolvido por Fabrício Curvello&copy;
+                       <p>Mah ooooee vem pra cá. Vem pra cá. É bom ou não éam? O arriscam tuduam, valendo um milhão de reaisuam. Vem pra lá, mah você vai pra cá. Agora vai, agora vem pra láamm. O Raul Gil é gayam! ... Maa O Ah Ae! Ih Ih! O Raul Gil é gayamm! Eu não queria perguntar isso publicamente, ma vou perguntar. Carla, você tem o ensino fundamentauam?</p>
+
+                       <p>Eu só acreditoammmm.... Vendoammmm. Qual é a musicamm? Patríciaaammmm... Luiz Ricardouaaammmmmm. Você veio da caravana de ondeammm? É com você Lombardiam. Ma quem quer dinheiroam?</p>
+
+                       <p>Mah roda a roduamm. Ma você está certo dissoam? Mah é a porta da esperançaam. Eu não queria perguntar isso publicamente, ma vou perguntar. Carla, você tem o ensino fundamentauam? Boca sujuam... sem vergonhuamm. Um, dois três, quatro, PIM, entendeuam?</p>
+
+             </article>
+     </section>
+     <footer>
+         Desenvolvido por <a href="https://github.com/befonto" target="_blank">Beatriz Fontoura&copy;</a>
+     </footer>
+ </div>
+ </body>
+
