--- a/video.html
+++ b/video.html
@@ -1,51 +1,85 @@
+<!DOCTYPE html>
+<html lang="pt-br">
 
-[AQUI ENTRA A IMAGEM DA LOGO]
+<head>
+    <meta charset="UTF-8">
+    <title>Vídeos - Estudo Com Café</title>
+    <link rel="stylesheet" type="text/css"  href="celular.css">
+    <link rel="stylesheet" type="text/css"  href="desktop.css">
+</head>
 
--Página Inicial
--Vídeos Selecionados
--Localização
+ <body>
+
+ <div id="interface">
+
+     <aside id="logo-menu">
+         <header>
+             <h1>
+                 <a href="index.html">
+                     <img src="imagens/logo.png">
+                 </a>
+             </h1>
+         </header>
+
+         <nav>
+             <ul>
+                 <li><a href="index.html">Página Inicial</a></li>
+                 <li><a href="video.html">Vídeos Selecionados</a></li>
+                 <li><a href="local.html">Localização</a></li>
+             </ul>
+         </nav>
+     </aside>
+
+     <section>
+             <article id="artigo-interno">
+                 <h1>Vídeos selecionados</h1>
+
+         <h2>Arrumando o local de estudos</h2>
+
+                <p><iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/TDcGtz2Wx4s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+
+                [AQUI ENTRA UM PARÁGRAFO]
+                [AQUI ENTRA UM PARÁGRAFO]
 
 
-Vídeos selecionados
+         <h2>Ergonomia da cadeira</h2>
 
-Arrumando o local de estudos
+               <p><iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/MeX0yHMs9Nk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 
-[AQUI ENTRA UM VÍDEO DO YOUTUBE]
-
-[AQUI ENTRA UM PARÁGRAFO]
-[AQUI ENTRA UM PARÁGRAFO]
+                [AQUI ENTRA UM PARÁGRAFO]
+                [AQUI ENTRA UM PARÁGRAFO]
 
 
-Ergonomia da cadeira
+        <h2>Altura da tela em relação aos seus olhos</h2>
 
-[AQUI ENTRA UM VÍDEO DO YOUTUBE]
+                <p><iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/RgKAFK5djSk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 
-[AQUI ENTRA UM PARÁGRAFO]
-[AQUI ENTRA UM PARÁGRAFO]
-
-                
-Altura da tela em relação aos seus olhos
-
-[AQUI ENTRA UM VÍDEO DO YOUTUBE]
-
-[AQUI ENTRA UM PARÁGRAFO]
-[AQUI ENTRA UM PARÁGRAFO]
+                [AQUI ENTRA UM PARÁGRAFO]
+                [AQUI ENTRA UM PARÁGRAFO]
 
 
-Atenção ao tempo diante da tela
-
-[AQUI ENTRA UM VÍDEO DO YOUTUBE]
-
-[AQUI ENTRA UM PARÁGRAFO]
-[AQUI ENTRA UM PARÁGRAFO]
+        <h2>Atenção ao tempo diante da tela</h2>
 
 
-Iluminação do ambiente
+                <p><iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/qVriK-z7JBA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 
-[AQUI ENTRA UM VÍDEO DO YOUTUBE]
+                [AQUI ENTRA UM PARÁGRAFO]
+                [AQUI ENTRA UM PARÁGRAFO]
 
-[AQUI ENTRA UM PARÁGRAFO]
-[AQUI ENTRA UM PARÁGRAFO]
 
-            
-Desenvolvido por Fabrício Curvello&copy;
+        <h2>Iluminação do ambiente</h2>
+
+                <p><iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/NNiTxUEnmKI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+
+                [AQUI ENTRA UM PARÁGRAFO]
+                [AQUI ENTRA UM PARÁGRAFO]
+
+             </article>
+     </section>
+
+
+     <footer>
+         Desenvolvido por <a href="https://github.com/befonto" target="_blank">Beatriz Fontoura&copy;</a>
+     </footer>
+ </div>
+ </body>
