site versão desktop pronto

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8"
+    <meta charset="UTF-8">
     <title>Estudo Com Café</title>
-    <link rel="stylesheet" type="text/css"  href="celular.css">
-    <link rel="stylesheet" type="text/css"  href="desktop.css">
+    <link rel="stylesheet" type="text/css"  href="css/desktop.css">
 </head>
 
  <body>
