--- a/local.html
+++ b/local.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Localização - Estudo Com Café</title>
-    <link rel="stylesheet" type="text/css"  href="celular.css">
-    <link rel="stylesheet" type="text/css"  href="desktop.css">
+    <link rel="stylesheet" type="text/css"  href="css/desktop.css">
 </head>
 
  <body>
@@ -37,7 +36,7 @@
 
                  <h2>Cursos profissionalizantes</h2>
 
-                    <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3691.5886366870845!2d114.1646818867539!3d22.293567290789674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1687789444115!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3691.5886366870845!2d114.1646818867539!3d22.293567290789674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1687789444115!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
                        <p>Silvio Santos Ipsum Ma não existem mulher feiam, existem mulher que não conhece os produtos Jequitiamm. Ma vejam só, vejam só. Patríciaaammmm... Luiz Ricardouaaammmmmm. Boca sujuam... sem vergonhuamm. Ha haeeee. Hi hi. O prêmio é em barras de ouro, que vale mais que dinheiroam. O arriscam tuduam, valendo um milhão de reaisuam.</p>
