--- a/video.html
+++ b/video.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Vídeos - Estudo Com Café</title>
-    <link rel="stylesheet" type="text/css"  href="celular.css">
-    <link rel="stylesheet" type="text/css"  href="desktop.css">
+    <link rel="stylesheet" type="text/css"  href="css/desktop.css">
 </head>
 
  <body>
@@ -36,43 +35,43 @@
 
          <h2>Arrumando o local de estudos</h2>
 
-                <p><iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/TDcGtz2Wx4s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+                <p><iframe class="video" src="https://www.youtube.com/embed/TDcGtz2Wx4s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 
-                [AQUI ENTRA UM PARÁGRAFO]
-                [AQUI ENTRA UM PARÁGRAFO]
+                <p>Silvio Santos Ipsum Ma não existem mulher feiam, existem mulher que não conhece os produtos Jequitiamm. Ma vejam só, vejam só. Patríciaaammmm... Luiz Ricardouaaammmmmm. Boca sujuam... sem vergonhuamm. Ha haeeee. Hi hi. O prêmio é em barras de ouro, que vale mais que dinheiroam. O arriscam tuduam, valendo um milhão de reaisuam.</p>
+                <p>Ma você, topa ou não topamm. Vem pra lá, mah você vai pra cá. Agora vai, agora vem pra láamm. Mah você não consegue né Moisés? Você não consegueam. Ma! Ao adquirir o carnê do Baú, você estará concorrendo a um prêmio de cem mil reaisam. É dinheiro ou não éam? Ma vejam só, vejam só.</p>
 
 
          <h2>Ergonomia da cadeira</h2>
 
-               <p><iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/MeX0yHMs9Nk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+               <p><iframe class="video" src="https://www.youtube.com/embed/MeX0yHMs9Nk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 
-                [AQUI ENTRA UM PARÁGRAFO]
-                [AQUI ENTRA UM PARÁGRAFO]
+                <p>Ma você, topa ou não topamm. Vem pra lá, mah você vai pra cá. Agora vai, agora vem pra láamm. Mah você não consegue né Moisés? Você não consegueam. Ma! Ao adquirir o carnê do Baú, você estará concorrendo a um prêmio de cem mil reaisam. É dinheiro ou não éam? Ma vejam só, vejam só.</p>
+                <p>Ma você, topa ou não topamm. Vem pra lá, mah você vai pra cá. Agora vai, agora vem pra láamm. Mah você não consegue né Moisés? Você não consegueam. Ma! Ao adquirir o carnê do Baú, você estará concorrendo a um prêmio de cem mil reaisam. É dinheiro ou não éam? Ma vejam só, vejam só.</p>
 
 
         <h2>Altura da tela em relação aos seus olhos</h2>
 
-                <p><iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/RgKAFK5djSk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+                <p><iframe class="video" src="https://www.youtube.com/embed/RgKAFK5djSk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 
-                [AQUI ENTRA UM PARÁGRAFO]
-                [AQUI ENTRA UM PARÁGRAFO]
+                <p>Ma você, topa ou não topamm. Vem pra lá, mah você vai pra cá. Agora vai, agora vem pra láamm. Mah você não consegue né Moisés? Você não consegueam. Ma! Ao adquirir o carnê do Baú, você estará concorrendo a um prêmio de cem mil reaisam. É dinheiro ou não éam? Ma vejam só, vejam só.</p>
+                <p>Ma você, topa ou não topamm. Vem pra lá, mah você vai pra cá. Agora vai, agora vem pra láamm. Mah você não consegue né Moisés? Você não consegueam. Ma! Ao adquirir o carnê do Baú, você estará concorrendo a um prêmio de cem mil reaisam. É dinheiro ou não éam? Ma vejam só, vejam só.</p>
 
 
         <h2>Atenção ao tempo diante da tela</h2>
 
 
-                <p><iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/qVriK-z7JBA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+                <p><iframe class="video" src="https://www.youtube.com/embed/qVriK-z7JBA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 
-                [AQUI ENTRA UM PARÁGRAFO]
-                [AQUI ENTRA UM PARÁGRAFO]
+                <p>Ma você, topa ou não topamm. Vem pra lá, mah você vai pra cá. Agora vai, agora vem pra láamm. Mah você não consegue né Moisés? Você não consegueam. Ma! Ao adquirir o carnê do Baú, você estará concorrendo a um prêmio de cem mil reaisam. É dinheiro ou não éam? Ma vejam só, vejam só.</p>
+                <p>Ma você, topa ou não topamm. Vem pra lá, mah você vai pra cá. Agora vai, agora vem pra láamm. Mah você não consegue né Moisés? Você não consegueam. Ma! Ao adquirir o carnê do Baú, você estará concorrendo a um prêmio de cem mil reaisam. É dinheiro ou não éam? Ma vejam só, vejam só.</p>
 
 
         <h2>Iluminação do ambiente</h2>
 
-                <p><iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/NNiTxUEnmKI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+                <p><iframe class="video" src="https://www.youtube.com/embed/NNiTxUEnmKI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 
-                [AQUI ENTRA UM PARÁGRAFO]
-                [AQUI ENTRA UM PARÁGRAFO]
+                <p>Ma você, topa ou não topamm. Vem pra lá, mah você vai pra cá. Agora vai, agora vem pra láamm. Mah você não consegue né Moisés? Você não consegueam. Ma! Ao adquirir o carnê do Baú, você estará concorrendo a um prêmio de cem mil reaisam. É dinheiro ou não éam? Ma vejam só, vejam só.</p>
+                <p>Ma você, topa ou não topamm. Vem pra lá, mah você vai pra cá. Agora vai, agora vem pra láamm. Mah você não consegue né Moisés? Você não consegueam. Ma! Ao adquirir o carnê do Baú, você estará concorrendo a um prêmio de cem mil reaisam. É dinheiro ou não éam? Ma vejam só, vejam só.</p>
 
              </article>
      </section>
