versão celular finalizada

--- a/video.html
+++ b/video.html
@@ -61,8 +61,7 @@
         <h2>Atenção ao tempo diante da tela</h2>
 
 
-                <p><iframe class="video" src="https://www.youtube.com/embed/qVriK-z7JBA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
-
+                <p><iframe class="video" src="https://www.youtube.com/embed/MF5Vj2X4s3Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
                 <p>Ma você, topa ou não topamm. Vem pra lá, mah você vai pra cá. Agora vai, agora vem pra láamm. Mah você não consegue né Moisés? Você não consegueam. Ma! Ao adquirir o carnê do Baú, você estará concorrendo a um prêmio de cem mil reaisam. É dinheiro ou não éam? Ma vejam só, vejam só.</p>
                 <p>Ma você, topa ou não topamm. Vem pra lá, mah você vai pra cá. Agora vai, agora vem pra láamm. Mah você não consegue né Moisés? Você não consegueam. Ma! Ao adquirir o carnê do Baú, você estará concorrendo a um prêmio de cem mil reaisam. É dinheiro ou não éam? Ma vejam só, vejam só.</p>
 
