--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
              </article>
 
              <aside id="imagens">
-                 <img class="imagens" src="imagens/flor.jpg">
-                 <img class="imagens" src="imagens/pes.jpg">
-                 <img class="imagens" src="imagens/olhos.jpg">
+                 <img class="imagem" src="imagens/flor.jpg">
+                 <img class="imagem" src="imagens/pes.jpg">
+                 <img class="imagem" src="imagens/olhos.jpg">
              </aside>
      </section>
 
